# workspace

1th/: Building.xml  CMakeCache.txt  CMakeLists.txt  Makefile  autogen.sh  cmake_install.cmake  configure.ac  gdbus_client.c  gdbus_server.c  gdbus_server.h
new/hicar_service/: .gitignore  CMakeLists.txt  README  toolchain-imx6.cmake
new/hicar_service/3rd/hicar_sdk/include/: HiCarDefine.h  HwRemoteControlEvent.h  dmsdp_audio_data_type.h  dmsdp_audio_handler.h  dmsdp_business.h  dmsdp_camera_data_type.h  dmsdp_camera_handler.h  dmsdp_device.h  dmsdp_errno.h  dmsdp_gps_handler.h  dmsdp_log.h  driver_adapt.h  hicar.h
new/hicar_service/3rd/hicar_sdk/src/: dmsdp_log.c  hicar_demo.c
new/hicar_service/3rd/rootfs/usr/include/glibmm-2.4/glibmm/: balancedtree.h  bytearray.h  bytes.h  checksum.h  convert.h  date.h  datetime.h  fileutils.h  iochannel.h  keyfile.h  markup.h  module.h  nodetree.h  optioncontext.h  optionentry.h  (+16 more)
new/hicar_service/3rd/rootfs/usr/lib/: libavahi-client.so.3.2.9  libavahi-common.so.3.5.3  libavahi-core.so.7.0.2  libavahi-glib.so.1.0.2  libavahi-gobject.so.0.0.4  libdaemon.so.0.5.0  libdns_sd.la  libdns_sd.so.1.0.0  libssl.so.1.1
new/hicar_service/3rd/rootfs/usr/lib/pkgconfig/: glibmm-2.4.pc
new/hicar_service/3rd/rootfs/usr/sbin/: avahi-autoipd  avahi-daemon  avahi-dnsconfd
new/hicar_service/config/Application/ipconfigd.service/: ipconfigd
new/hicar_service/config/etc/: asound.conf  unique_config.json
new/hicar_service/config/etc/systemd/system/: ipconfigd.service
new/hicar_service/config/etc/systemd/system/multi-user.target.wants/: ipconfigd.service
new/hicar_service/core/: CMakeLists.txt
new/hicar_service/core/oxygen/common/: CMakeLists.txt  oxygen_internal.h
new/hicar_service/core/oxygen/common/exception/: throw.h
new/hicar_service/core/oxygen/common/log/: oxygen_assert.h  oxygen_log.cpp  oxygen_log.h
new/hicar_service/core/oxygen/common/plugin/: plugin_base.cpp  plugin_base.h  plugin_manager.cpp  plugin_manager.h
new/hicar_service/core/oxygen/common/utility/: byteorder.h  datatype.h  deserializable.h  deserializer.cpp  deserializer.h  format.cpp  format.h  hex_conv.cpp  hex_conv.h  serializable.h  serializer.cpp  serializer.h  struct_mem_var_init.h  utility_macro.h
new/hicar_service/core/socket/: CMakeLists.txt  io_center.cpp  io_center.h  net_helper.cpp  net_helper.h  netcore.h  rw_iface.h  tcp_server_channel.cpp  tcp_server_channel.h  tcpconnection.cpp  tcpconnection.h  tcpserver.cpp  tcpserver.h
new/hicar_service/script/: build.sh  capl  deploy.sh  hicarsdk_deplay  release.sh
new/hicar_service/script/inmachine/: clear_hicar_data.sh  deploy.sh  runenv  set_bt_mac
new/hicar_service/script/script/: get_phone_log  get_vehicle_log  start_debug
new/hicar_service/src/: CMakeLists.txt  RrConfig.cpp  RrConfig.h  hicarlink.cpp  hicarlink.h  hicarlinkImpl.cpp  hicarlinkImpl.h  main.cpp  verify.cpp  verify.h
new/hicar_service/src/unique_config/: CMakeLists.txt  unique_config.cpp  unique_config.h
new/hicar_service/src/usb/: CMakeLists.txt  driver_usb.cpp  hicar_usb_def.h  hicar_usb_manager.cpp  hicar_usb_manager.h  hicar_usb_protocol.cpp  hicar_usb_protocol.h  usb_plugin_monitor.cpp  usb_plugin_monitor.h  usb_status_smc_sm.cpp  usb_status_smc_sm.h  verify.cpp  verify.h
new/hicar_service/src/usb/usb_status_smc/: smc.sh  usb_status_smc.sm  usb_status_smc_sm.dot
new/hicar_service/src/virtual_dev/audio/: CMakeLists.txt  config.h.in
new/hicar_service/src/virtual_dev/audio/docs/: Linux HiCar Audio适配指南.md
new/hicar_service/src/virtual_dev/audio/include/: HiCarAudioHal.h  container_of.h  util.h
new/hicar_service/src/virtual_dev/audio/src/: HiCarAudioHal.c  util.c
new/hicar_service/src/virtual_dev/audio/tests/: TestAudioRecord.c  TestGetAudioCapabilityString.c  TestPlayAudio.c  TestUnderrun.c
new/hicar_service/src/virtual_dev/bt/: README
new/hicar_service/src/virtual_dev/bt/btclient/: CMakeLists.txt  device.xml  hsaeble.xml  hsaewifi.pro  hsaewifi_global.h  spp.xml
new/hicar_service/src/virtual_dev/bt/btclient/include/: device.h  hsaewifi.h  spp.h
new/hicar_service/src/virtual_dev/bt/btclient/src/: device.c  hsaeble.c  hsaewifi.cpp  spp.c
new/hicar_service/src/virtual_dev/bt/btserver/: CMakeLists.txt  README.md  imx6-ivt.files  imx6-ivt.includes
new/hicar_service/src/virtual_dev/bt/btserver/conf/: TL.INI  UpdateBTAddress  asound.conf  bt_firmware_set  com.hsaeyz.bluetooth.conf  hsaebt.conf  iap2_config.xml  rampatch_tlv_tf_1.1.tlv
new/hicar_service/src/virtual_dev/bt/btserver/systemd/: hsaebtserver.service
new/hicar_service/src/virtual_dev/bt/btserver/xml/: Bluetooth接口设计.xlsx  ble.xml  device.xml  media.xml  phone.xml  set.xml  spp.xml
new/hicar_service/src/virtual_dev/bt/demo/: CMakeLists.txt  Makefile  demo_hicar.files  demo_hicar.includes  driver_adapt.h  main.cpp
new/hicar_service/src/virtual_dev/camera/hicarCap/: CMakeLists.txt
new/hicar_service/src/virtual_dev/camera/hicarCap/include/: Gst_Video_Capture.h  JenDebug.h
new/hicar_service/src/virtual_dev/camera/hicarCap/src/: Gst_Video_Capture.c  dmsdp_camera_sdk_samples.c
new/hicar_service/src/virtual_dev/motionsensor/: CMakeLists.txt  motionsensor.cpp
new/hicar_service/src/virtual_dev/video/: README
new/hicar_service/src/virtual_dev/video/HicarStream/: .project  CMakeLists.txt
new/hicar_service/src/virtual_dev/video/HicarStream/include/: AvcVideo.h  HicarStream.h
new/hicar_service/src/virtual_dev/video/HicarStream/src/: AvcVideo.c  HicarStream.cpp
new/hicar_service/src/virtual_dev/wifi/WiFi_Services/: CMakeLists.txt  Makefile  README.md
new/hicar_service/src/virtual_dev/wifi/WiFi_Services/config/: Wifi.service  wifi.conf
new/hicar_service/src/virtual_dev/wifi/WiFi_Services/src/: 50default  CMakeLists.txt  Makefile  WifiClient.c  WifiClient.h  WifiClient.xml  WifiClientImpl.cc  WifiClientImpl.h  WifiMonitor.cc  WifiMonitor.h  WifiNative.cc  WifiNative.h  WifiService.c  WifiService.h  WifiService.xml  WifiServiceImpl.cc  WifiServiceImpl.h  client.c  demo_wifi.c  driver_adapter.c  local.h  readme  socket.c  wifilocal.h  wpa_ctrl.c
(+95 files in other folders)
