#specify the minimum version of cmake
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8 FATAL_ERROR)

AUX_SOURCE_DIRECTORY(. DIR_UTILS_SRCS)
SET(DIR_UTILS_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/base64.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bitfield.c
    ${CMAKE_CURRENT_SOURCE_DIR}/common.c
    ${CMAKE_CURRENT_SOURCE_DIR}/ip_addr.c
    ${CMAKE_CURRENT_SOURCE_DIR}/radiotap.c
    ${CMAKE_CURRENT_SOURCE_DIR}/trace.c
    ${CMAKE_CURRENT_SOURCE_DIR}/uuid.c
    ${CMAKE_CURRENT_SOURCE_DIR}/wpa_debug.c
    ${CMAKE_CURRENT_SOURCE_DIR}/wpabuf.c
    ${CMAKE_CURRENT_SOURCE_DIR}/os_unix.c
    ${CMAKE_CURRENT_SOURCE_DIR}/eloop.c
    ${CMAKE_CURRENT_SOURCE_DIR}/edit.c
    )
ADD_LIBRARY ( utils ${DIR_UTILS_SRCS})
